[metadata]
name = monitapi
version = 0.3.1
author = fealone
author_email = fealone@lonesec.com
description = monitapi is something to monitor API(URL) by a serverless.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/fealone/monitapi
licence = file: LICENCE
python_requires = >=3.7
classifiers = 
  Development Status :: 2 - Pre-Alpha
  License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
